--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Jan 07 2026 10:09:18 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Jan 07 2026 17:52:41 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc79103" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -22,8 +22,6 @@
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <link href="https://www.nords.fi" rel="canonical">
-  <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-PSLMFQDWYR"></script>
-  <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('set', 'developer_id.dZGVlNj', true);gtag('js', new Date());gtag('config', 'G-PSLMFQDWYR');</script>
   <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="70a813b3-3f24-4230-9fe4-da57fb9a6f73" data-blockingmode="auto" type="text/javascript"></script>
 </head>
 <body>
@@ -142,7 +140,7 @@
                     <div id="w-node-dd83491a-f040-74b8-47b7-0c0e0a91babf-8494b580" class="hero__wrap">
                       <div id="w-node-e4641a48-7ada-426e-c0d1-0bf78494b587-8494b580" class="hero__header">
                         <div class="hero__heading">
-                          <h1>Kotisivut ilman stressiä.</h1>
+                          <h1 class="heading-2 w-variant-e4641a48-7ada-426e-c0d1-0bf78494b599">Kotisivut ilman stressiä.</h1>
                         </div>
                       </div>
                       <div id="w-node-e4641a48-7ada-426e-c0d1-0bf78494b58e-8494b580" class="hero__btn w-variant-e4641a48-7ada-426e-c0d1-0bf78494b599">
@@ -157,7 +155,7 @@
                     </div>
                     <div id="w-node-_78e20ed5-d228-431b-f70c-cbf128248689-8494b580" class="hero__img-wrap width-80"></div>
                   </div>
-                  <div class="hero__bg-wrap bg--fixed"><img src="images/aaltoileva-usva.webp" loading="lazy" alt="Himmeässä valaistuksessa sinivihreä aaltoileva usva tai valo tummalla taustalla." sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="images/ae12820a913a5c888b8023783f8ccc08_smooth-p-500.webp 500w, images/ae12820a913a5c888b8023783f8ccc08_smooth-p-800.webp 800w, images/ae12820a913a5c888b8023783f8ccc08_smooth-p-1080.webp 1080w, images/ae12820a913a5c888b8023783f8ccc08_smooth-p-1600.webp 1600w, images/aaltoileva-usva.webp 2000w" class="hero__bg-img w-variant-e4641a48-7ada-426e-c0d1-0bf78494b599">
+                  <div class="hero__bg-wrap bg--fixed"><img src="images/smooth.webp" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="images/ae12820a913a5c888b8023783f8ccc08_smooth-p-500.webp 500w, images/ae12820a913a5c888b8023783f8ccc08_smooth-p-800.webp 800w, images/ae12820a913a5c888b8023783f8ccc08_smooth-p-1080.webp 1080w, images/ae12820a913a5c888b8023783f8ccc08_smooth-p-1600.webp 1600w, images/smooth.webp 2000w" class="hero__bg-img w-variant-e4641a48-7ada-426e-c0d1-0bf78494b599">
                     <div class="hero__bg-mask"></div>
                   </div>
                 </div>
@@ -211,7 +209,7 @@
           <div class="w-layout-grid grid grid--6-col">
             <div id="w-node-_52d1eb35-d1e0-c7f3-62fd-ddf907c5c35f-bfc79103" class="item">
               <div class="content__heading tablet-align-center">
-                <h2 class="display-heading--md">Meihin luottaa jo 600+ upeaa suomalaista yritystä</h2>
+                <h2 class="display-heading--md">Meihin luottaa jo 600+ upea suomalaista yritystä</h2>
               </div>
             </div>
             <div id="w-node-aa3d250e-118b-d286-f886-15ee10fef428-bfc79103" class="logo-carousel splide">
@@ -226,7 +224,7 @@
                   <div class="splide__slide"><img loading="lazy" src="images/SWISSGriP.webp" alt="SWISSGriP logo" class="logo"></div>
                   <div class="splide__slide"><img loading="lazy" src="images/Lakitoimisto_Pakanen.webp" alt="Lakitoimisto Pakanen" class="logo"></div>
                   <div class="splide__slide"><img loading="lazy" src="images/Viitarak-logo.webp" alt="Viitarak logo" class="logo"></div>
-                  <div class="splide__slide"><img loading="lazy" src="images/elainsairaala-sacrum.webp" alt="Eläinsairala Sacrum -logo" class="logo"></div>
+                  <div class="splide__slide"><img sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.984375px, 939.9765625px" srcset="images/image-p-500.webp 500w, images/image-p-800.webp 800w, images/image-p-1080.webp 1080w, images/elainsairaala-sacrum.webp 1794w" alt="Eläinsairala Sacrum -logo" src="images/elainsairaala-sacrum.webp" loading="lazy" class="logo"></div>
                 </div>
               </div>
             </div>
@@ -1845,7 +1843,7 @@
                           </div>
                         </div>
                         <div class="team__btn">
-                          <a aria-label="linkedin" href="https://www.credly.com/badges/a31af7f6-a62c-4fb6-8936-0ef50fc867ac/email" target="_blank" class="w-inline-block"><img src="images/google-cybersecurity-certificate.webp" loading="lazy" alt="Google Cybersecurity -sertifikaatti Courseran suorittamasta kurssista." sizes="100vw" srcset="images/d6073c32ae2e346412f88381856825c5_google-cybersecurity-certificate-p-500.webp 500w, images/google-cybersecurity-certificate.webp 504w" class="google-cert w-variant-fa53e771-1857-f129-ee52-acfa1771d891"></a>
+                          <a aria-label="linkedin" href="https://www.credly.com/badges/a31af7f6-a62c-4fb6-8936-0ef50fc867ac/email" target="_blank" class="w-inline-block"><img src="images/google-cybersecurity-certificate.webp" loading="lazy" alt="Google Cybersecurity -sertifikaatti Courseran suorittamasta kurssista." sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.9921875px, 939.9921875px" srcset="images/d6073c32ae2e346412f88381856825c5_google-cybersecurity-certificate-p-500.webp 500w, images/google-cybersecurity-certificate.webp 504w" class="google-cert w-variant-fa53e771-1857-f129-ee52-acfa1771d891"></a>
                         </div>
                       </div>
                     </div>
@@ -1865,7 +1863,7 @@
                           </div>
                         </div>
                         <div class="team__btn">
-                          <a aria-label="linkedin" href="https://www.credly.com/badges/329a074b-725a-4dae-833a-197889699533/public_url" target="_blank" class="w-inline-block"><img src="images/google-digital-marketing-and-e-commerce-professiona.webp" loading="lazy" alt="" sizes="100vw" srcset="images/google-digital-marketing-and-e-commerce-professiona-p-500.webp 500w, images/google-digital-marketing-and-e-commerce-professiona-p-800.webp 800w, images/google-digital-marketing-and-e-commerce-professiona.webp 952w" class="google-cert w-variant-fa53e771-1857-f129-ee52-acfa1771d891"></a>
+                          <a aria-label="linkedin" href="https://www.credly.com/badges/329a074b-725a-4dae-833a-197889699533/public_url" target="_blank" class="w-inline-block"><img src="images/google-digital-marketing-and-e-commerce-professiona.webp" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.9921875px, 939.9921875px" srcset="images/google-digital-marketing-and-e-commerce-professiona-p-500.webp 500w, images/google-digital-marketing-and-e-commerce-professiona-p-800.webp 800w, images/google-digital-marketing-and-e-commerce-professiona.webp 952w" class="google-cert w-variant-fa53e771-1857-f129-ee52-acfa1771d891"></a>
                         </div>
                       </div>
                     </div>
@@ -2150,7 +2148,7 @@
                     <a href="tyot">Career</a>
                   </div>
                   <div class="modal__link">
-                    <a href="company/palvelusivu">Demo</a>
+                    <a href="julkaisut/palvelusivu">Demo</a>
                   </div>
                   <div class="modal__link">
                     <a href="#">Coming Soon</a>
@@ -2417,6 +2415,89 @@
         </div>
       </section>
     </footer>
+    <div class="live-chat-wrapper preview-page">
+      <div style="display:none" class="live-chat-content">
+        <div style="-webkit-transform:translate3d(0, 48px, 0) scale3d(0.8, 0.8, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 48px, 0) scale3d(0.8, 0.8, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 48px, 0) scale3d(0.8, 0.8, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 48px, 0) scale3d(0.8, 0.8, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="live-chat-content-right">
+          <div class="live-chat-message nords">
+            <div class="background-video w-embed w-script">
+              <div class="video-container" style="position: relative; width: 100%; line-height: 0; border-radius: 12px; overflow: hidden; background: #000;">
+                <video id="introVideo" autoplay="" muted="" loop="" playsinline="" style="width: 100%; height: auto; display: block; cursor: pointer;">
+                  <source src="https://www.nords.fi/videos/nords-intro.mp4" type="video/mp4">
+                </video>
+                <button id="playBtn" style="
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    margin: 0; padding: 0;
+    background: rgba(0, 0, 0, 0.6); 
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    border-radius: 50%; 
+    width: 70px; 
+    height: 70px; 
+    cursor: pointer; 
+    display: flex; 
+    align-items: center; 
+    justify-content: center;
+    z-index: 10;
+    transition: all 0.2s ease;">
+                  <div id="iconContainer">
+                    <svg id="playIcon" width="32" height="32" viewbox="0 0 24 24" fill="white" style="margin-left: 4px;">
+                      <path d="M8 5V19L19 12L8 5Z"></path>
+                    </svg>
+                  </div>
+                </button>
+              </div>
+              <script>
+  const video = document.getElementById('introVideo');
+  const btn = document.getElementById('playBtn');
+  const iconContainer = document.getElementById('iconContainer');
+  // Icons as Strings for light swapping
+  const playIcon = '<svg width="32" height="32" viewBox="0 0 24 24" fill="white" style="margin-left: 4px;"><path d="M8 5V19L19 12L8 5Z" /></svg>';
+  const pauseIcon = '<svg width="32" height="32" viewBox="0 0 24 24" fill="white"><path d="M6 19H10V5H6V19ZM14 5V19H18V5H14Z" /></svg>';
+  function togglePlay() {
+    if (video.muted) {
+      // First click: Unmute and restart
+      video.muted = false;
+      video.currentTime = 0;
+      video.play();
+      iconContainer.innerHTML = pauseIcon;
+      // Fade button out slightly after unmuting
+      btn.style.opacity = "0"; 
+    } else {
+      // Subsequent clicks: Standard Pause/Play
+      if (video.paused) {
+        video.play();
+        iconContainer.innerHTML = pauseIcon;
+        btn.style.opacity = "0";
+      } else {
+        video.pause();
+        iconContainer.innerHTML = playIcon;
+        btn.style.opacity = "1";
+      }
+    }
+  }
+  // Click events for both button and video area
+  btn.addEventListener('click', togglePlay);
+  video.addEventListener('click', togglePlay);
+  // Show button when video is hovered or paused
+  video.addEventListener('mouseenter', () => { if(!video.muted) btn.style.opacity = "1"; });
+  video.addEventListener('mouseleave', () => { if(!video.paused && !video.muted) btn.style.opacity = "0"; });
+</script>
+            </div>
+            <div class="popup-link-flex">
+              <a href="https://wa.me/358402469419" target="_blank" class="link-block w-inline-block"><img src="images/whatsapp-brix-templates-clonable.svg" loading="lazy" alt="" class="popup-image">
+                <div>Laita viestiä WhatsApissa</div>
+              </a>
+              <a href="tel:+358402469419" class="link-block w-inline-block"><img src="images/puhelin.svg" loading="lazy" alt="Puhelin ikoni" class="popup-image invert">
+                <div>Soita 040 2469419</div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div data-w-id="c712a533-4692-74ad-eb57-ac5b9214eb1c" style="opacity:0" class="live-chat-bubbble---brix"><img style="opacity:1;-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0deg) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0deg) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0deg) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0deg) skew(0, 0)" src="images/ikoni_1.webp" alt="" class="live-chat-logo---brix"><img style="-webkit-transform:translate3d(0, 0, 0) scale3d(0.8, 0.8, 1) rotateX(0) rotateY(0) rotateZ(45deg) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0.8, 0.8, 1) rotateX(0) rotateY(0) rotateZ(45deg) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0.8, 0.8, 1) rotateX(0) rotateY(0) rotateZ(45deg) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0.8, 0.8, 1) rotateX(0) rotateY(0) rotateZ(45deg) skew(0, 0);opacity:0" src="images/close-white-brix-templates-clonable.svg" alt="" class="live-chat-close-icon---brix"></div>
+    </div>
   </div>
   <div class="utilities">
     <div data-wf--cursor---hover--variant="primary" class="hover-cursor__component">
@@ -2426,9 +2507,7 @@
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6934202faf17f8cbbfc79092" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/nords-new.js" type="text/javascript"></script><!--  Elfsight AI Chatbot | Untitled AI Chatbot  -->
-  <script src="https://static.elfsight.com/platform/platform.js" async=""></script>
-  <div class="elfsight-app-8710a1d1-348c-4159-a2be-20e841fb548b" data-elfsight-app-lazy=""></div><!--  Splide Slider  -->
+  <script src="js/nords-new.js" type="text/javascript"></script><!--  Splide Slider  -->
   <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
   <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/js/splide-extension-auto-scroll.min.js"></script>
