--- a/kysely.html
+++ b/kysely.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Jan 07 2026 10:09:18 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Jan 07 2026 17:52:41 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69411fb0954c65393233845d" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -22,8 +22,6 @@
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <link href="https://www.nords.fi/kysely" rel="canonical">
-  <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-PSLMFQDWYR"></script>
-  <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('set', 'developer_id.dZGVlNj', true);gtag('js', new Date());gtag('config', 'G-PSLMFQDWYR');</script>
   <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="70a813b3-3f24-4230-9fe4-da57fb9a6f73" data-blockingmode="auto" type="text/javascript"></script>
 </head>
 <body>
@@ -172,7 +170,7 @@
                     <a href="tyot">Career</a>
                   </div>
                   <div class="modal__link">
-                    <a href="company/palvelusivu">Demo</a>
+                    <a href="julkaisut/palvelusivu">Demo</a>
                   </div>
                   <div class="modal__link">
                     <a href="#">Coming Soon</a>
@@ -446,11 +444,8 @@
         <div class="hover-cursor__icon"><img src="images/nuoli-ylos.svg" loading="lazy" alt="Nuoli ylös" class="image-7"></div>
       </div>
     </div>
-    <div data-wf--loader---global--variant="primary" class="loader"></div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6934202faf17f8cbbfc79092" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/nords-new.js" type="text/javascript"></script><!--  Elfsight AI Chatbot | Untitled AI Chatbot  -->
-  <script src="https://static.elfsight.com/platform/platform.js" async=""></script>
-  <div class="elfsight-app-8710a1d1-348c-4159-a2be-20e841fb548b" data-elfsight-app-lazy=""></div>
+  <script src="js/nords-new.js" type="text/javascript"></script>
 </body>
 </html>
