--- a/ota-yhteytta.html
+++ b/ota-yhteytta.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Jan 07 2026 10:09:18 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Jan 07 2026 17:52:41 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc7923d" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -22,8 +22,6 @@
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <link href="https://www.nords.fi/ota-yhteytta" rel="canonical">
-  <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-PSLMFQDWYR"></script>
-  <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('set', 'developer_id.dZGVlNj', true);gtag('js', new Date());gtag('config', 'G-PSLMFQDWYR');</script>
   <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="70a813b3-3f24-4230-9fe4-da57fb9a6f73" data-blockingmode="auto" type="text/javascript"></script>
 </head>
 <body>
@@ -301,6 +299,89 @@
         </section>
         <div class="divider"></div>
       </div>
+      <div class="live-chat-wrapper preview-page">
+        <div class="live-chat-content">
+          <div class="live-chat-content-right">
+            <div class="live-chat-message nords">
+              <div class="background-video w-embed w-script">
+                <div class="video-container" style="position: relative; width: 100%; line-height: 0; border-radius: 12px; overflow: hidden; background: #000;">
+                  <video id="introVideo" autoplay="" muted="" loop="" playsinline="" style="width: 100%; height: auto; display: block; cursor: pointer;">
+                    <source src="https://www.nords.fi/videos/nords-intro.mp4" type="video/mp4">
+                  </video>
+                  <button id="playBtn" style="
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    margin: 0; padding: 0;
+    background: rgba(0, 0, 0, 0.6); 
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    border-radius: 50%; 
+    width: 70px; 
+    height: 70px; 
+    cursor: pointer; 
+    display: flex; 
+    align-items: center; 
+    justify-content: center;
+    z-index: 10;
+    transition: all 0.2s ease;">
+                    <div id="iconContainer">
+                      <svg id="playIcon" width="32" height="32" viewbox="0 0 24 24" fill="white" style="margin-left: 4px;">
+                        <path d="M8 5V19L19 12L8 5Z"></path>
+                      </svg>
+                    </div>
+                  </button>
+                </div>
+                <script>
+  const video = document.getElementById('introVideo');
+  const btn = document.getElementById('playBtn');
+  const iconContainer = document.getElementById('iconContainer');
+  // Icons as Strings for light swapping
+  const playIcon = '<svg width="32" height="32" viewBox="0 0 24 24" fill="white" style="margin-left: 4px;"><path d="M8 5V19L19 12L8 5Z" /></svg>';
+  const pauseIcon = '<svg width="32" height="32" viewBox="0 0 24 24" fill="white"><path d="M6 19H10V5H6V19ZM14 5V19H18V5H14Z" /></svg>';
+  function togglePlay() {
+    if (video.muted) {
+      // First click: Unmute and restart
+      video.muted = false;
+      video.currentTime = 0;
+      video.play();
+      iconContainer.innerHTML = pauseIcon;
+      // Fade button out slightly after unmuting
+      btn.style.opacity = "0"; 
+    } else {
+      // Subsequent clicks: Standard Pause/Play
+      if (video.paused) {
+        video.play();
+        iconContainer.innerHTML = pauseIcon;
+        btn.style.opacity = "0";
+      } else {
+        video.pause();
+        iconContainer.innerHTML = playIcon;
+        btn.style.opacity = "1";
+      }
+    }
+  }
+  // Click events for both button and video area
+  btn.addEventListener('click', togglePlay);
+  video.addEventListener('click', togglePlay);
+  // Show button when video is hovered or paused
+  video.addEventListener('mouseenter', () => { if(!video.muted) btn.style.opacity = "1"; });
+  video.addEventListener('mouseleave', () => { if(!video.paused && !video.muted) btn.style.opacity = "0"; });
+</script>
+              </div>
+              <div class="popup-link-flex">
+                <a href="https://wa.me/358402469419" target="_blank" class="link-block w-inline-block"><img src="images/whatsapp-brix-templates-clonable.svg" loading="lazy" alt="" class="popup-image">
+                  <div>Laita viestiä WhatsApissa</div>
+                </a>
+                <a href="tel:+358402469419" class="link-block w-inline-block"><img src="images/puhelin.svg" loading="lazy" alt="Puhelin ikoni" class="popup-image invert">
+                  <div>Soita 040 2469419</div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div data-w-id="664ddd0c-1694-5dc5-8160-f9a8b0708e1f" class="live-chat-bubbble---brix"><img alt="" src="images/ikoni_1.webp" class="live-chat-logo---brix"><img alt="" src="images/close-white-brix-templates-clonable.svg" class="live-chat-close-icon---brix"></div>
+      </div>
     </main>
     <div class="aside">
       <div class="modal">
@@ -429,7 +510,7 @@
                     <a href="tyot">Career</a>
                   </div>
                   <div class="modal__link">
-                    <a href="company/palvelusivu">Demo</a>
+                    <a href="julkaisut/palvelusivu">Demo</a>
                   </div>
                   <div class="modal__link">
                     <a href="#">Coming Soon</a>
@@ -703,11 +784,8 @@
         <div class="hover-cursor__icon"><img src="images/nuoli-ylos.svg" loading="lazy" alt="Nuoli ylös" class="image-7"></div>
       </div>
     </div>
-    <div data-wf--loader---global--variant="primary" class="loader"></div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6934202faf17f8cbbfc79092" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/nords-new.js" type="text/javascript"></script><!--  Elfsight AI Chatbot | Untitled AI Chatbot  -->
-  <script src="https://static.elfsight.com/platform/platform.js" async=""></script>
-  <div class="elfsight-app-8710a1d1-348c-4159-a2be-20e841fb548b" data-elfsight-app-lazy=""></div>
+  <script src="js/nords-new.js" type="text/javascript"></script>
 </body>
 </html>
