--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Jan 20 2026 06:49:31 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Jan 20 2026 10:20:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc79103" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -218,6 +218,7 @@
               <div class="splide__track">
                 <div class="splide__list">
                   <div class="splide__slide"><img loading="lazy" src="images/Asuja_Kiinteistopalvelut.webp" alt="Asuja Kiinteistöpalvelut logo" class="logo"></div>
+                  <div class="splide__slide"><img loading="lazy" src="images/hecover_1.webp" alt="Hecover logo" class="logo"></div>
                   <div class="splide__slide"><img loading="lazy" src="images/Maakymppi.webp" alt="Maakymppi logo" class="logo"></div>
                   <div class="splide__slide"><img loading="lazy" src="images/Satama_Bar_Bistro.webp" alt="Satama Bar Bistro" class="logo"></div>
                   <div class="splide__slide"><img loading="lazy" src="images/La_Reine.webp" alt="La Reine logo" class="logo"></div>
@@ -226,7 +227,7 @@
                   <div class="splide__slide"><img loading="lazy" src="images/SWISSGriP.webp" alt="SWISSGriP logo" class="logo"></div>
                   <div class="splide__slide"><img loading="lazy" src="images/Lakitoimisto_Pakanen.webp" alt="Lakitoimisto Pakanen" class="logo"></div>
                   <div class="splide__slide"><img loading="lazy" src="images/Viitarak-logo.webp" alt="Viitarak logo" class="logo"></div>
-                  <div class="splide__slide"><img sizes="100vw" srcset="images/image-p-500.webp 500w, images/image-p-800.webp 800w, images/image-p-1080.webp 1080w, images/elainsairaala-sacrum.webp 1794w" alt="Eläinsairala Sacrum -logo" src="images/elainsairaala-sacrum.webp" loading="lazy" class="logo"></div>
+                  <div class="splide__slide"><img sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.984375px, 939.9765625px" srcset="images/image-p-500.webp 500w, images/image-p-800.webp 800w, images/image-p-1080.webp 1080w, images/elainsairaala-sacrum.webp 1794w" alt="Eläinsairala Sacrum -logo" src="images/elainsairaala-sacrum.webp" loading="lazy" class="logo"></div>
                 </div>
               </div>
             </div>
@@ -1845,7 +1846,7 @@
                           </div>
                         </div>
                         <div class="team__btn">
-                          <a aria-label="linkedin" href="https://www.credly.com/badges/a31af7f6-a62c-4fb6-8936-0ef50fc867ac/email" target="_blank" class="w-inline-block"><img src="images/google-cybersecurity-certificate.webp" loading="lazy" alt="Google Cybersecurity -sertifikaatti Courseran suorittamasta kurssista." sizes="100vw" srcset="images/d6073c32ae2e346412f88381856825c5_google-cybersecurity-certificate-p-500.webp 500w, images/google-cybersecurity-certificate.webp 504w" class="google-cert w-variant-fa53e771-1857-f129-ee52-acfa1771d891"></a>
+                          <a aria-label="linkedin" href="https://www.credly.com/badges/a31af7f6-a62c-4fb6-8936-0ef50fc867ac/email" target="_blank" class="w-inline-block"><img src="images/google-cybersecurity-certificate.webp" loading="lazy" alt="Google Cybersecurity -sertifikaatti Courseran suorittamasta kurssista." sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.9921875px, 939.9921875px" srcset="images/d6073c32ae2e346412f88381856825c5_google-cybersecurity-certificate-p-500.webp 500w, images/google-cybersecurity-certificate.webp 504w" class="google-cert w-variant-fa53e771-1857-f129-ee52-acfa1771d891"></a>
                         </div>
                       </div>
                     </div>
@@ -1865,7 +1866,7 @@
                           </div>
                         </div>
                         <div class="team__btn">
-                          <a aria-label="linkedin" href="https://www.credly.com/badges/329a074b-725a-4dae-833a-197889699533/public_url" target="_blank" class="w-inline-block"><img src="images/google-digital-marketing-and-e-commerce-professiona.webp" loading="lazy" alt="" sizes="100vw" srcset="images/google-digital-marketing-and-e-commerce-professiona-p-500.webp 500w, images/google-digital-marketing-and-e-commerce-professiona-p-800.webp 800w, images/google-digital-marketing-and-e-commerce-professiona.webp 952w" class="google-cert w-variant-fa53e771-1857-f129-ee52-acfa1771d891"></a>
+                          <a aria-label="linkedin" href="https://www.credly.com/badges/329a074b-725a-4dae-833a-197889699533/public_url" target="_blank" class="w-inline-block"><img src="images/google-digital-marketing-and-e-commerce-professiona.webp" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.9921875px, 939.9921875px" srcset="images/google-digital-marketing-and-e-commerce-professiona-p-500.webp 500w, images/google-digital-marketing-and-e-commerce-professiona-p-800.webp 800w, images/google-digital-marketing-and-e-commerce-professiona.webp 952w" class="google-cert w-variant-fa53e771-1857-f129-ee52-acfa1771d891"></a>
                         </div>
                       </div>
                     </div>
